creat css page and add navbar to html page

--- a/assets/index.html
+++ b/assets/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>safeguarding kids- Roblox Game</title>
+    <title>Safeguarding kids- Roblox Game</title>
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- Style Css  -->
@@ -11,6 +11,29 @@
 
 </head>
 <body>
+    <!-- Header Start -->
+<header id="home">
+<div class="navbar">
+
+    <nav>
+        <a href="#" id="logo"> <img src="images/Untitled.jpg" alt="safeguardin kids" >
+     </a>
+    <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">Resouces</a></li>
+        <li><a href="#">Report Here</a></li>
+        <li><a href="#">Home</a></li>
+
+    </ul>
+
+    </nav>
+
+</div>
+
+</header>
+
+
+    <!-- Header End -->
     
 </body>
 </html>
