Make header and footer responsive

--- a/assets/index.html
+++ b/assets/index.html
@@ -22,10 +22,9 @@
                 <h1 class="logo">Childs safeguarding</h1>
                 <ul>
                     <li><a href="#home">Home</a></li>
-                    <li><a href="#guide">Guide</a></li>
-                    <li><a href="#">Report Here</a></li>
-                    <li><a href="#">kjnjjh</a></li>
-
+                    <li><a href="#">Partner Guid</a></li>
+                    <li><a href="#">Resourses</a></li>
+                    <li><a href="#">Report The Concerns</a></li>
                 </ul>
 
             </nav>
@@ -33,7 +32,7 @@
 
     </header>
 
-    <div class="content"">
+    <!-- <div class="content"">
         <div class=" content-text">
 
         <div class="test">
@@ -49,7 +48,6 @@
     </div>
 
     </div>
-    <!-- Header End -->
 
     <section class="parent-roblox" id="guide">
         <div class="col1">
@@ -114,6 +112,6 @@
         </div>
     </div>
 </section>
-    
+     -->
 </body>
 </html>
