home page modified

--- a/assets/index.html
+++ b/assets/index.html
@@ -15,39 +15,95 @@
 </head>
 
 <body>
-    <header id="home">
-        <div class="navbar">
+    <header>
 
+        <div class="header-logo">
+            <h1>Childs safeguarding</h1>
+
+        </div>
+
+
+        <div class="header-navbar">
             <nav>
-                <h1 class="logo">Childs safeguarding</h1>
                 <ul>
                     <li><a href="#home">Home</a></li>
-                    <li><a href="#">Partner Guid</a></li>
-                    <li><a href="#">Resourses</a></li>
-                    <li><a href="#">Report The Concerns</a></li>
+                    <li><a href="#Partner Guid">Partner Guid</a></li>
+                    <li><a href="#Resourses">Resourses</a></li>
+                    <li><a href="#Report The Concerns">Report The Concerns</a></li>
                 </ul>
 
             </nav>
         </div>
 
     </header>
+        <main>
 
-    <!-- <div class="content"">
-        <div class=" content-text">
 
-        <div class="test">
+            <section class="section" id="home">
 
-            <h1>who is responsible for safeguarding</h1>
-            <p class="first-p">It is everyone’s responsibility to protect children and young people and keep them safe.
-                It is important that families, communities and professionals can recognise when a child or young person
-                is being harmed and that they know what action to take in response.</p>
-        </div>
-    </div>
-    <div class="img1">
-        <img src="images/Roblox-768x512.jpg" alt="">
-    </div>
+                <div class="test">
 
-    </div>
+                    <h1>who is responsible for safeguarding</h1>
+                    <p class="first-p">It is everyone’s responsibility to protect children and young people and keep
+                        them safe.
+                        It is important that families, communities and professionals can recognise when a child or young
+                        person
+                        is being harmed and that they know what action to take in response.</p>
+                </div>
+
+                <div class="img1">
+                    <img src="images/Roblox-768x512.jpg" alt="">
+                </div>
+
+            </section>
+
+            <section class="section" id="Partner Guid">
+
+                <div class="test">
+
+                    <h1>who is responsible for safeguarding</h1>
+                    <p class="first-p">It is everyone’s responsibility to protect children and young people and keep
+                        them safe.
+                        It is important that families, communities and professionals can recognise when a child or young
+                        person
+                        is being harmed and that they know what action to take in response.</p>
+                </div>
+
+                <div class="img1">
+                    <img src="images/Roblox-768x512.jpg" alt="">
+                </div>
+
+            </section>
+
+            <section class="section" id="Resourses">
+
+                <div class="test">
+
+                    <h1>who is responsible for safeguarding</h1>
+                    <p class="first-p">It is everyone’s responsibility to protect children and young people and keep
+                        them safe.
+                        It is important that families, communities and professionals can recognise when a child or young
+                        person
+                        is being harmed and that they know what action to take in response.</p>
+                </div>
+
+                <div class="img1">
+                    <img src="images/Roblox-768x512.jpg" alt="">
+                </div>
+
+            </section>
+
+        </main>
+
+
+
+
+
+        <footer>
+            Footer
+        </footer>
+
+
 
     <section class="parent-roblox" id="guide">
         <div class="col1">
@@ -114,4 +170,5 @@
 </section>
      -->
 </body>
+
 </html>
