Added report section

--- a/assets/index.html
+++ b/assets/index.html
@@ -27,8 +27,8 @@
             <nav role="navigation">
                 <ul>
                     <li><a href="#home">Home</a></li>
-                    <li><a href="#Partner-Guid">Partner Guid</a></li>
-                    <li><a href="#Resourses">Resourses</a></li>
+                    <li><a href="#partner-guid">Partner Guid</a></li>
+                    <li><a href="#resourses">Resourses</a></li>
                     <li><a href="#report">Report Your Concern</a></li>
                 </ul>
             </nav>
@@ -41,7 +41,7 @@
                     It is important that families, communities and professionals can recognise when a child or young
                     person
                     is being harmed and that they know what action to take in response.</p>
-                <a href="#contact" class="btn btn-primary">Report Your Concern</a>
+                <a href="#report" class="btn btn-primary">Report Your Concern</a>
             </div>
             <img src="images/download.jpg" alt="safeguarding responsible">
         </div>
@@ -72,8 +72,61 @@
                 </div>
             </div>
         </section>
-        <!-- Partner Guid  End   -->
 
+        <section id="resourses">
+            <div class="container">
+                <div class="resourses-content">
+                    <h1>Children viewing harmful content while gaming
+                        ?</h1>
+                    <p>The Roblox boom is giving some parents pause, as they wonder if the game's multiplayer format and
+                        free and open communication policy are safe for kids. As with any video game with these
+                        features, there are some risks, but overall, Roblox can be a safe gaming platform for older
+                        children according to experts—especially when parents take some precautions.
+                        Here, we dive into what Roblox is, potential risks you should know about, and how you can keep
+                        your child safe from the risks experts want all parents to know about.</p>
+
+                </div>
+
+                <div .class="iframe">
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/pWzhE8fUi7E?si=4NgnWew3bOapKKs5"
+                        title="YouTube video player" frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
+                </div>
+            </div>
+        </section>
+        <section id="report">
+            <div class="container">
+                <div class="report-content">
+                    <h1>How Do I Report My Concerns?</h1>
+                    <p>Tusla has a statutory responsibility to assess all reports of child welfare and protection
+                        concerns. Anyone who suspects that a child is being abused, or is at risk of abuse, has a duty
+                        to report their suspicions to Tusla. You should report your concerns to the Tusla <a href="https://www.tusla.ie/children-first/contact-a-social-worker3/">social work duty officer in the area the child lives</a>
+
+                        You can report your concerns in person, by writing or by phone. While you can report your
+                        concerns anonymously, Tusla does not normally reveal the names of people who report suspicions
+                        of child abuse unless they have permission to do so.</p>
+
+                </div>
+                <div class="call">
+
+                    Tusla - Child and Family Agency
+Brunel Building
+Heuston South Quarter
+Dublin 8
+Ireland
+
+Tel: (01) 771 8500
+Homepage: https://www.tusla.ie/
+Email: info@tusla.ie
+Page edited: 10 May 20
+
+                </div>
+
+
+            </div>
+        </section>
 
     </main>
     <!-- <footer id="footer">
