--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
     <!-- Font Awesome -->
 
     <!-- Favcoin  -->
-    <link rel="icon" href="favicon/favicon-16x16.png">
-    <link rel="icon" href="favicon/favicon-32x32.png">
-    <link rel="apple-touch-icon" href="favicon/apple-touch-icon.png">
+    <link rel="icon" href="assets/favicon/favicon-16x16.png">
+    <link rel="icon" href="assets/favicon/favicon-32x32.png">
+    <link rel="apple-touch-icon" href="assets/favicon/apple-touch-icon.png">
     <!-- Style Css  -->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
 
 </head>
 
@@ -23,12 +23,11 @@
     <!-- Header Start -->
     <header>
         <div id="navbar">
-            <img src="images/Safeguarding+Icon.png" alt="safeguarding Logo">
-            <nav role="navigation">
+            <img src="assets/images/Safeguarding+Icon.png" alt="safeguarding Logo">
+            <nav >
                 <ul>
                     <li><a href="#home">Home</a></li>
-                    <li><a href="#partner-guid">Partner Guid</a></li>
-                    <li><a href="#resourses">Resourses</a></li>
+                    <li><a href="#partner-guid">Partners Guid</a></li>
                     <li><a href="#report">Report Your Concern</a></li>
                 </ul>
             </nav>
@@ -43,7 +42,7 @@
                     is being harmed and that they know what action to take in response.</p>
                 <a href="#report" class="btn btn-primary">Report Your Concern</a>
             </div>
-            <img src="images/download.jpg" alt="safeguarding responsible">
+            <img src="assets/images/download.jpg" alt="safeguarding responsible">
         </div>
     </header>
     <!-- Header End -->
@@ -53,8 +52,8 @@
             <div class="container">
                 <div class="partner-content">
                     <div class="col1">
-                        <h1>Children viewing harmful content while gaming
-                            ?</h1>
+                        <h2>Children viewing harmful content while gaming
+                            ?</h2>
                         <p>The Roblox boom is giving some parents pause, as they wonder if the game's multiplayer format
                             and
                             free and open communication policy are safe for kids. As with any video game with these
@@ -65,14 +64,14 @@
                             your child safe from the risks experts want all parents to know about.</p>
 
                         <div class="col2">
-                            <h2>Lorem ipsum dolor sit amet.</h2>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nam, sint.</p>
-                        </div>
+                            <h2>Parents' Ultimate Guide to Roblox</h2>
+<a href="https://www.commonsensemedia.org/articles/parents-ultimate-guide-to-roblox">Partners Guide</a> 
+                       </div>
 
                     </div>
                 </div>
 
-                <div .class="iframe">
+                <div class="iframe">
                     <iframe width="400" height="280" src="https://www.youtube.com/embed/pWzhE8fUi7E?si=4NgnWew3bOapKKs5"
                         title="YouTube video player" frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
@@ -82,32 +81,7 @@
             </div>
         </section>
         <!-- Partner Guid Section End -->
-        <!--  Resourses Section Satrt -->
-
-        <section id="resourses">
-            <div class="container">
-                <div class="resourses-content">
-                    <h1>Children viewing harmful content while gaming
-                        ?</h1>
-                    <p>The Roblox boom is giving some parents pause, as they wonder if the game's multiplayer format and
-                        free and open communication policy are safe for kids. As with any video game with these
-                        features, there are some risks, but overall, Roblox can be a safe gaming platform for older
-                        children according to experts—especially when parents take some precautions.
-                        Here, we dive into what Roblox is, potential risks you should know about, and how you can keep
-                        your child safe from the risks experts want all parents to know about.</p>
-
-                </div>
-
-                <div .class="iframe">
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/pWzhE8fUi7E?si=4NgnWew3bOapKKs5"
-                        title="YouTube video player" frameborder="0"
-                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
-                        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-
-                </div>
-            </div>
-        </section>
-        <!--  Resourses Section End -->
+        
         <section id="report">
             <div class="container">
                 <!-- <h1>Report Your Concern</h1> -->
@@ -147,7 +121,12 @@
 
     </main>
 
+<footer>
 
+<div>
+    <p>© 2024 | All rights reserved</p>
+
+</div></footer>
 
 </body>
 
