Add target class to all links

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
                         <div class="col2">
                             <h2>Parents' Ultimate Guide to Roblox</h2>
-<a href="https://www.commonsensemedia.org/articles/parents-ultimate-guide-to-roblox">Partners Guide</a> 
+<a href="https://www.commonsensemedia.org/articles/parents-ultimate-guide-to-roblox" target="_blank">Partners Guide</a> 
                        </div>
 
                     </div>
