fixed navbart links

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <!-- Header End -->
     <main>
         <!-- Partner Guid Section Start -->
-        <section id="partner-guid">
+        <section id="parents-guid">
             <div class="container">
                 <div class="partner-content">
                     <div class="col1">
