--- a/index.html
+++ b/index.html
@@ -27,42 +27,53 @@
 <body>
 
 
-    <div class="container-fluid ">
 
-        <div class="row my-5 d-flix justify-center align-center">
-            <div class=" col-md-9 text-center order-2">
 
-                <nav>
-                    <ul class="d-flex list-unstyled my-5 ">
-                        <li class="mx-5 "><a class="text-decoration-none" href="#">Home</a></li>
-                        <li class="mx-5 "><a class="text-decoration-none" href="#">Parents Guid</a>
-                        </li>
-                        <li class="mx-5"><a class="text-decoration-none" href="#">Report Your
-                                Concern</a></li>
-                    </ul>
-                </nav>
-            </div>
-            <div class=" col-md-3 text-center order-1 align-center my-23 ">
-                <img class="img-brand rounded" width="90" src="assets/images/Safeguarding+Icon.png"
-                    alt="safeguarding Logo">
 
-            </div>
 
-        </div>
+    <div class="row">
+
+
+        <nav class="navbar navbar-expand-lg">
+
+            <img class="img-brand rounded d-sm-none logo" width="90" src="assets/images/Safeguarding+Icon.png"
+                alt="safeguarding Logo">
+
+            <ul class="navbar-nav ms-auto navbar-dark  ">
+                <li class="mx-5 "><a class="text-decoration-none" href="#">Home</a></li>
+                <li class="mx-5 "><a class="text-decoration-none" href="#">Parents Guid</a>
+                </li>
+                <li class="mx-5 "><a class="text-decoration-none" href="#">Parents Guid</a>
+                </li>
+                <li class="mx-5 "><a class="text-decoration-none" href="#">Parents Guid</a>
+                </li>
+                <li class="mx-5 "><a class="text-decoration-none" href="#">Parents Guid</a>
+                </li>
+                <li class="mx-5"><a class="text-decoration-none" href="#">Report Your Concern</a></li>
+            </ul>
+
+        </nav>
+
 
     </div>
 
-    <div class="container-md border text-center">
 
 
-        <div class="section mt-5 border ">
 
-            <div class="row mb-5 mt-5">
+
+
+    <section class="group1">
+        <div class="container  text-center">
+
+
+
+            <div class="row  justify-content-center align-item-center">
                 <div class="col-12 col-md-6">
                     <h2 class="">Who is Responsible For Safeguarding ?</h2>
                     <p>It is everyone’s responsibility to protect children and young people and keep
                         them safe.
-                        It is important that families, communities and professionals can recognise when a child or young
+                        It is important that families, communities and professionals can recognise when a child or
+                        young
                         person
                         is being harmed and that they know what action to take in response.</p>
                     <button type="button" class="btn btn-primary px-5 py-2 ">Your Concerns</button>
@@ -73,10 +84,13 @@
                 </div>
             </div>
 
-        </div>
 
-        <div class="section border mt-5">
-            <div class="row my-5">
+        </div>
+    </section>
+
+    <section class="group2">
+        <div class="container  text-center">
+            <div class="row  justify-content-center align-item-center">
                 <div class="col-12 col-md-6 ">
                     <h2>Parents' Ultimate Guide to Roblox</h2>
                     <a href="https://www.commonsensemedia.org/articles/parents-ultimate-guide-to-roblox"
@@ -94,11 +108,14 @@
 
             </div>
 
-        </div>
+
+    </section>
 
 
-        <div class="section border mt-5 ">
-            <div class="row my-5">
+    <section class="group3">
+
+        <div class="container text-center">
+            <div class="row  justify-content-center align-item-center">
                 <div class="col-12 col-md-6">
                     <h2>How Do I Report My Concerns?</h2>
                     <p>Tusla has a statutory responsibility to assess all reports of child welfare and protection
@@ -130,27 +147,151 @@
 
             </div>
 
+
         </div>
+
+    </section>
+
+
+
+    <div class="container text-center pt-5 pb-5">
+        <div class="row">
+            <div class="col-sm-6 col-md-4 col-lg-3">
+                <div class="set">
+                    <img class="img-fluid" src="./assets/images/roblox-safety-guide.jpg" alt="">
+                </div>
+                <h4>Test Title</h4>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illo, quod.</p>
+            </div>
+            <div class="col-sm-6 col-md-4 col-lg-3">
+                <div class="set">
+                    <img class="img-fluid" src="./assets/images/Roblox-768x512.jpg" alt="">
+                </div>
+                <h4>Test Title</h4>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illo, quod.</p>
+            </div>
+            <div class="col-sm-6 col-md-4 col-lg-3">
+                <div class="set">
+                    <img class="img-fluid" src="./assets/images/roblox-safety-guide.jpg" alt="">
+                </div>
+                <h4>Test Title</h4>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illo, quod.</p>
+            </div>
+            <div class="col-sm-6 col-md-4 col-lg-3">
+                <div class="set">
+                    <img class="img-fluid" src="./assets/images/roblox-safety-guide.jpg" alt="">
+                </div>
+                <h4>Test Title</h4>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illo, quod.</p>
+            </div>
+            <div class="col-sm-6 col-md-4 col-lg-3">
+                <div class="set">
+                    <img class="img-fluid" src="./assets/images/roblox-safety-guide.jpg" alt="">
+                </div>
+                <h4>Test Title</h4>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illo, quod.</p>
+            </div>
+            <div class="col-sm-6 col-md-4 col-lg-3">
+                <div class="set">
+                    <img class="img-fluid" src="./assets/images/roblox-safety-guide.jpg" alt="">
+                </div>
+                <h4>Test Title</h4>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illo, quod.</p>
+            </div>
+            <div class="col-sm-6 col-md-4 col-lg-3">
+                <div class="set">
+                    <img class="img-fluid" src="./assets/images/roblox-safety-guide.jpg" alt="">
+                </div>
+                <h4>Test Title</h4>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illo, quod.</p>
+            </div>
+            <div class="col-sm-6 col-md-4 col-lg-3">
+                <div class="set">
+                    <img class="img-fluid" src="./assets/images/roblox-safety-guide.jpg" alt="">
+                </div>
+                <h4>Test Title</h4>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illo, quod.</p>
+            </div>
+
+        </div>
+    </div>
+
+
+    <div class="blog pt-5 pb-5">
+        <div class="container text-center">
+            <h2 class="name ">Mohammed Baashn</h2>
+            <p class="">Lorem ipsum dolor sit amet.</p>
+
+            <div class="row">
+                <div class="col-sm-12 col-md-6 col-lg-3">
+                    <div class="card">
+                        <img class="img-fluid" src="./assets/images/Roblox-768x512.jpg" alt="">
+                        <div class="card-body">
+                            <span class="text-black-50">17 FEB 2024</span>
+                            <h5>hatooo besoraah</h5>
+                        </div>
+
+                    </div>
+
+
+                </div>
+
+                <div class="col-sm-12 col-md-6 col-lg-3">
+                    <div class="card">
+                        <img class="img-fluid" src="./assets/images/Roblox-768x512.jpg" alt="">
+                        <div class="card-body">
+                            <span class="text-black-50">17 FEB 2024</span>
+                            <h5>hatooo besoraah</h5>
+                        </div>
+
+                    </div>
+
+
+                </div>
+                <div class="col-sm-12 col-md-6 col-lg-3">
+                    <div class="card">
+                        <img class="img-fluid" src="./assets/images/Roblox-768x512.jpg" alt="">
+                        <div class="card-body">
+                            <span class="text-black-50">17 FEB 2024</span>
+                            <h5>hatooo besoraah</h5>
+                        </div>
+
+                    </div>
+
+
+                </div>
+                <div class="col-sm-12 col-md-6 col-lg-3">
+                    <div class="card">
+                        <img class="img-fluid" src="./assets/images/Roblox-768x512.jpg" alt="">
+                        <div class="card-body">
+                            <span class="text-black-50">17 FEB 2024</span>
+                            <h5>hatooo besoraah</h5>
+                        </div>
+
+                    </div>
+
+
+                </div>
+            </div>
+
+        </div>
+
+
 
     </div>
 
 
+    <br><br><br><br><br><br><br><br>
 
-    <div class="row bg-primary ">
-        <div class="col-md-6 col-lg-6 text-light d-flex justify-center align-center text-center">
-            <p>© 2024 | All rights reserved</p>
 
-        </div>
-        <div class="col-12 col-md-6"></div>
-        <ul class="d-flex list-unstyled mx-2  text-black">
-            <li><a href="#">Facebook</a></li>
-            <li><a href="#">Twettier</a></li>
-            <li><a href="#">Instegram</a></li>
-        </ul>
-    </div>
+
+
+    <footer class="text-center">
+        <p>© 2024 | All rights reserved</p>
+
 
     </footer>
-    </div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
